tests/sksl/errors/VertexEarlyReturn.glsl
### Compilation failed:

error: 5: early returns from vertex programs are not supported
    if (zoom == 1) return;
                   ^^^^^^^
1 error
